<resources>
    <string name="app_name">replace</string>

    <!-- common -->
    <string name="bad_internet_message">인터넷 상태가 불안정합니다</string>
    <string name="wrong_connection_message">네트워크 연결이 잘못되었습니다</string>
    <string name="parse_error_message">데이터를 처리하는 중에 문제가 발생했습니다</string>
    <string name="fail_message">네트워크 처리에 실패했습니다</string>
    <string name="unexpected_error_message">예상하지 못한 오류가 발생했습니다</string>
    <string name="loading_message">로딩 중입니다</string>
    <string name="loading_save_message">저장 중입니다</string>

    <!-- bottom navigation-->
    <string name="bottom_navigation_home_title">홈</string>
    <string name="bottom_navigation_diary_title">일기장</string>
    <string name="bottom_navigation_bookmark_title">북마크</string>
    <string name="bottom_navigation_alarm_title">알림</string>
    <string name="bottom_navigation_mypage_title">마이페이지</string>

    <!-- diary editor activity -->
    <string name="diary_editor_title">일기 작성하기</string>
    <string name="diary_editor_title_hint">장소에서 기억을 한 문장으로 나타내보세요</string>
    <string name="diary_editor_image_number">%d/10</string>
    <string name="diary_editor_content_hint">일기를 작성해보세요</string>
    <string name="diary_editor_share_diary_title">일기를 공유할 범위를 선택해주세요</string>
    <string name="diary_editor_share_all">전체 공유</string>
    <string name="diary_editor_share_us">우리만 공유</string>
    <string name="diary_editor_diary_save">작성 완료</string>

    <!-- diary detail activity -->
    <string name="diary_detail_toolbar_menu_update">수정</string>
    <string name="diary_detail_toolbar_menu_delete">삭제</string>
    <string name="diary_detail_profile_image_description">프로필 이미지</string>
    <string name="diary_detail_place_marker_description">장소마커</string>
    <string name="diary_detail_title_format">&quot;%s&quot;</string>

    <!-- diary detail activity delete dialog -->
    <string name="diary_detail_delete_dialog_title">정말로 삭제하시겠습니까?</string>
    <string name="diary_detail_delete_dialog_yes">예</string>
    <string name="diary_detail_delete_dialog_no">아니요</string>

    <!-- couple connection activity -->
    <string name="replace_code_message">당신의 리플 코드</string>
    <string name="share_code_message">나의 코드 공유</string>
    <string name="input_code_message">상대방의 코드 입력</string>

    <!-- input code activity -->
    <string name="input_code_title">상대방의 코드를 입력해서 커플 연결을 해주세요</string>
    <string name="input_code_hint_message">상대방의 코드를 입력해주세요</string>
    <string name="input_ok_message">완료</string>

    <!-- diary fragment -->
    <string name="diary_title">우리의 일기장</string>
    <string name="diary_title_with_profile">의 일기</string>
    <string name="date_error_message">날짜 선택은 현재 날짜 이전만 가능합니다.</string>
    <string name="image_remain_count">+%d</string>

    <!-- my page fragment -->
    <string name="mypage_title">마이페이지</string>
    <string name="mypage_setting_profile_update">회원 정보 수정</string>
    <string name="mypage_setting_couple_connect">커플 연결하기</string>
    <string name="mypage_setting_couple_disconnect">커플 연결 끊기</string>
    <string name="mypage_setting_push_alarm">푸시 알림 설정</string>
    <string name="mypage_setting_logout">로그아웃</string>
    <string name="mypage_setting_withdraw">회원탈퇴</string>
    <string name='mypage_preparing_feature'>준비 중인 기능입니다</string>
    <string name="couple_disconnect_dialog_title">정말 연결을 끊으실건가요?</string>
    <string name="couple_disconnect_dialog_content">끊기 버튼 선택 시, 서로의 계정은\n다시 연결될 수 없습니다.</string>
    <string name="couple_disconnect_dialog_yes">연결 끊기</string>
    <string name="couple_disconnect_dialog_no">취소</string>

    <!-- home fragment -->
    <string name="write_diary">일기 작성하기</string>
    <string name="home_fragment_empty_our_diaries_title">우리의 일기장을 채워보아요\n추억을 기록해보세요</string>
    <string name="our_diary_title">우리의 일기장</string>
    <string name="all_diary_title">전체 일기장</string>
</resources>
