<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.diaryeditor.DiaryEditorActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_diary_editor"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/gray_434343"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="일기 작성하기" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.divider.MaterialDivider
        android:layout_width="0dp"
        android:layout_height="0.5dp"
        android:background="@color/black_000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_diary_editor" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="80dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="20dp" />

    <include
        android:id="@+id/view_select_image"
        layout="@layout/view_select_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@id/guideline_top"
        app:layout_constraintWidth_percent="0.1888" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_diary_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="@id/view_select_image"
        app:layout_constraintEnd_toStartOf="@+id/guideline_end"
        app:layout_constraintStart_toEndOf="@+id/view_select_image"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        tools:listitem="@layout/item_diary_image" />

    <Space
        android:id="@+id/space_title_top"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H, 360: 20"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/view_select_image" />

    <EditText
        android:id="@+id/et_diary_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_stroke_9eceb4_radius_10dp"
        android:hint="@string/diary_editor_title_hint"
        android:paddingHorizontal="10dp"
        android:textColorHint="@color/gray_D9D9D9"
        android:textSize="16sp"
        android:maxLength="30"
        android:maxLines="1"
        app:layout_constraintDimensionRatio="H, 320:44"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/space_title_top" />

    <Space
        android:id="@+id/space_title_bottom"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H, 360: 20"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/et_diary_title" />

    <EditText
        android:id="@+id/et_diary_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_stroke_9eceb4_radius_10dp"
        android:gravity="top"
        android:hint="@string/diary_editor_content_hint"
        android:maxLines="3000"
        android:padding="10dp"
        android:scrollbars="vertical"
        android:textColorHint="@color/gray_D9D9D9"
        android:textSize="16sp"
        app:layout_constraintDimensionRatio="H, 320:240"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/space_title_bottom" />

    <Space
        android:id="@+id/space2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H, 360:20"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/et_diary_content" />

    <TextView
        android:id="@+id/tv_share_diary_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/diary_editor_share_diary_title"
        android:textColor="@color/gray_434343"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/guideline_start"
        app:layout_constraintTop_toBottomOf="@+id/space2" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/tv_share_diary_title">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/selector_share_diary_check"
            android:padding="10dp"
            android:text="@string/diary_editor_share_all"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatRadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@drawable/selector_share_diary_check"
            android:padding="10dp"
            android:text="@string/diary_editor_share_us"
            android:textSize="16sp" />

    </RadioGroup>

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/bg_9eceb4_radius_15dp"
        android:gravity="center"
        android:text="@string/diary_editor_diary_save"
        android:textColor="@color/white_FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/guideline_bottom"
        app:layout_constraintDimensionRatio="H,320:40"
        app:layout_constraintEnd_toEndOf="@id/guideline_end"
        app:layout_constraintStart_toStartOf="@id/guideline_start" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="20dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
