<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.coupleconnection.CoupleConnectionActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_couple_connection"
            android:layout_width="0dp"
            android:layout_height="?attr/actionBarSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="88dp" />

        <ImageView
            android:id="@+id/iv_couple_connect"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_couple_connect"
            app:layout_constraintDimensionRatio="H,1.5:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/guideline_top" />

        <Space
            android:id="@+id/space_image_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,360:16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_couple_connect" />

        <TextView
            android:id="@+id/tv_replace_code_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/replace_code_message"
            android:textColor="@color/black_000000"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/space_image_bottom" />

        <TextView
            android:id="@+id/tv_replace_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:textColor="@color/black_000000"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_replace_code_message"
            tools:text="HSDFSEEDKK" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="20dp" />


        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="20dp" />

        <Space
            android:id="@+id/space_code_bottom"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="H,360:100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_replace_code" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_9eceb4_radius_15dp"
            android:elevation="4dp"
            android:gravity="center"
            android:text="@string/share_code_message"
            android:textColor="@color/white_FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="H,150:60"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/space_code_bottom"
            app:layout_constraintWidth_percent="0.4166" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_9eceb4_radius_15dp"
            android:elevation="4dp"
            android:gravity="center"
            android:text="@string/input_code_message"
            android:textColor="@color/white_FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintDimensionRatio="H,150:60"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintTop_toBottomOf="@id/space_code_bottom"
            app:layout_constraintWidth_percent="0.4166" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
